# bookmarks

./: Cargo.toml  Dockerfile  LICENSE  README.markdown  README.md  docker-compose.yml  flake.nix  pyproject.toml  requirements-freeze.txt  requirements.txt
.github/workflows/: ci.yaml
bookmarks/: common.py  create-index.py  indexer.py  serve.py
bookmarks/index/: create.py  dump.py
bookmarks/templates/: error.html
concourse/: pipeline.yml
config/: elasticsearch-schema.yaml
src/: common.py  create-index.py  dump-index.py  es.rs  indexer.py  lib.rs  serve.py  web.rs
src/static/: style.css
src/templates/: _layout.html  _result.partial.html  add.html  post-add.html  search.html
src/web/: mod.rs
src/web/_resources/: style.css
src/web/_templates/: _result.partial.html.tera  error.html.tera  new.html.tera  search.html.tera  success.html.tera
