[package]
name = "bookmarks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["multipart"] }
clap = { version = "~4.5.16", features = ["derive", "env"] }
elasticsearch = "8.5.0-alpha.1"
lazy_static = "1"
mime = "0.3"
reqwest = "0.12"
scraper = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tera = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
