[package]
name = "bookmarks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8.7", features = ["multipart"] }
clap = { version = "~4.5.52", features = ["derive", "env"] }
elasticsearch = "9.1.0-alpha.1"
mime = "0.3"
reqwest = "0.12"
scraper = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tera = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
