[tool.poetry]
name = "bookmarks"
version = "0"
description = "A database and web app to keep track of my bookmarks."
authors = ["Michael Walker <mike@barrucadu.co.uk>"]
license = "WTFPL"

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.11.2"
elasticsearch = "^8.0.0"
Flask = "^2.2.3"
google-api-python-client = "^2.80.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^1.0.0"
gunicorn = "^20.1.0"
PyYAML = "^6.0"
requests = "^2.28.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
