[tool.poetry]
name = "bookmarks"
version = "0"
description = "A database and web app to keep track of my bookmarks."
authors = ["Michael Walker <mike@barrucadu.co.uk>"]
license = "WTFPL"

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.12.2"
elasticsearch = "^8.11.1"
Flask = "^3.0.0"
google-api-python-client = "^2.111.0"
google-auth-httplib2 = "^0.1.1"
google-auth-oauthlib = "^1.1.0"
gunicorn = "^21.2.0"
PyYAML = "^6.0"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
serve = "bookmarks.serve:run"
indexer = "bookmarks.indexer:run"
create-index = "bookmarks.index.create:run"
dump-index = "bookmarks.index.dump:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
